--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -9,8 +9,9 @@ layout: layouts/base.njk
 
 <figure>
 	{% set absoluteUrl %}{{ page.url }}{% endset %}
-	{% if cover_url %}
-	{% image "{{ coverUrl }}", "{{title}} cover image"%}
+	{{ coverURL }}
+	{% if(coverURL) %}
+    <img class="cover-img" src={% convert coverURL %} alt="cover image" height="auto" />
 	{% else %}
 	{% endif %}
 </figure>
