--- a/content/index.njk
+++ b/content/index.njk
@@ -13,9 +13,7 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
     {% for item in pagination.items %}
         <a href="{{ item.page.url }}">
         <div class="p-3 d-flex color-bg-default Box m-3 post-container">
-          {% if(item.data.cover) %}
-            <img class="cover-img" src="/covers/{{item.data.cover}}" alt="cover image" height="auto" loading="lazy" decoding="async"/>
-          {% elif(item.data.coverURL) %}
+          {% if(item.data.coverURL) %}
             <img class="cover-img" src={% convert item.data.coverURL %} alt="cover image" height="auto" />
           {% endif %}
           <div class="d-flex pl-3 flex-direction-col post-title-container">
