--- a/public/css/index.css
+++ b/public/css/index.css
@@ -946,6 +946,14 @@ h2 + .header-anchor {
     width: 78px;
     height: 78px;
 }
+
+.cover-img {
+	border-radius:8px;
+    aspect-ratio: 1 / 1;
+    width: 78px;
+    height: 78px;
+}
+
 .flex-center {
     display: flex;
     justify-content: center;
