--- a/public/css/index.css
+++ b/public/css/index.css
@@ -609,9 +609,6 @@ main :first-child {
 	margin-top: 0;
 }
 
-header {
-	border-bottom: 1px dashed var(--color-gray-20);
-}
 header:after {
 	content: "";
 	display: table;
@@ -947,11 +944,12 @@ h2 + .header-anchor {
     height: 78px;
 }
 
-.cover-img {
-	border-radius:8px;
+.big-cover-img {
+	border-radius: 12px;
     aspect-ratio: 1 / 1;
-    width: 78px;
-    height: 78px;
+    width: 544px;
+    max-width: 544px;
+    max-height: 262px;
 }
 
 .flex-center {
