deploy: befe446477bd97b7f568db029af7599b364e5246

--- a/css/index.css
+++ b/css/index.css
@@ -609,9 +609,6 @@ main :first-child {
 	margin-top: 0;
 }
 
-header {
-	border-bottom: 1px dashed var(--color-gray-20);
-}
 header:after {
 	content: "";
 	display: table;
@@ -946,6 +943,15 @@ h2 + .header-anchor {
     width: 78px;
     height: 78px;
 }
+
+.big-cover-img {
+	border-radius: 12px;
+    aspect-ratio: 1 / 1;
+    width: 544px;
+    max-width: 544px;
+    max-height: 262px;
+}
+
 .flex-center {
     display: flex;
     justify-content: center;
