--- a/css/index.css
+++ b/css/index.css
@@ -948,9 +948,9 @@ h2 + .header-anchor {
     border-radius: 12px;
     aspect-ratio: 544/262;
     width: 100%;
-    max-width: 544px;
     max-height: 262px;
     object-fit: cover;
+    margin-bottom:16px;
 }
 
 .flex-center {
