--- a/content/index.njk
+++ b/content/index.njk
@@ -14,7 +14,7 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
         <a href="{{ item.page.url }}">
         <div class="p-3 d-flex color-bg-default Box m-3 post-container">
           {% if(item.data.coverURL) %}
-            <img class="cover-img" src={% convert item.data.coverURL %} alt="cover image" height="auto" />
+            <img class="cover-img" src={% convert item.data.coverURL, "1" %} alt="cover image" height="auto" />
           {% endif %}
           <div class="d-flex pl-3 flex-direction-col post-title-container">
               <h5 class="d-flex flex-items-center post-title">
