--- a/content/index.njk
+++ b/content/index.njk
@@ -12,7 +12,7 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
 <div class="posts-container">
     {% for item in pagination.items %}
         <a href="{{ item.page.url }}">
-        <div class="p-3 d-flex color-bg-default Box m-3 post-container">
+        <div class="p-3 d-flex color-bg-default m-3 post-container">
           {% if(item.data.coverURL) %}
             <img class="cover-img" src={% convert item.data.coverURL, "1" %} alt="cover image" height="auto" />
           {% endif %}
