--- a/content/index.njk
+++ b/content/index.njk
@@ -12,14 +12,14 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
 <div class="posts-container">
     {% for item in pagination.items %}
         <a href="{{ item.page.url }}">
-        <div class="p-3 d-flex color-bg-default m-3 post-container">
+        <div class="p-3 d-flex color-bg-default m-3p post-container">
           {% if(item.data.coverURL) %}
             <img class="cover-img" src={% convert item.data.coverURL, "1" %} alt="cover image" height="auto" />
           {% endif %}
           <div class="d-flex pl-3 flex-direction-col post-title-container">
-              <h5 class="d-flex flex-items-center post-title">
+              <h4 class="d-flex flex-items-center post-title">
                   {% if item.data.title %}{{ item.data.title }}{% else %}<code>{{ item.url }}</code>{% endif %}
-              </h5>
+              </h4>
               <time class="postlist-date" datetime="{{ item.date | htmlDateString }}">{{ item.page.date | readableDate("yyyy/LL/dd") }}</time>
           </div>
         </div>
