--- a/public/css/index.css
+++ b/public/css/index.css
@@ -918,6 +918,9 @@ h2 + .header-anchor {
     /* margin: var(--base-size-16, 16px) !important; */
     margin: 16px 0;
 }
+.m-3p {
+    margin: 16% 0;
+}
 .d-flex {
     display: flex !important;
 }
