--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -61,6 +61,9 @@
 				
 				<div id="drawerMenu">
 					<ul>
+						<li>Categories</li>
+						<li><a href="/">home</a></li>
+						<li><a href="/about">about</a></li>
 						{%- for categories, posts in eleventyComputedGetCategories  %}
 							<li>
 									<details>
