--- a/css/index.css
+++ b/css/index.css
@@ -1065,7 +1065,7 @@ h2 + .header-anchor {
 }
 
 #openDrawerBtn {
-    position: sticky;
+    position: inherit;
     top: 20px;
     cursor: pointer;
     background-color: #24292e;
