--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -20,6 +20,13 @@
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
+		  <meta property="og:title" content={{ "{ title or renderData.title or metadata.title }" | escape }}/>
+  <meta property="og:url" content={{ "{ page.url }" | escape }} />
+  <meta property="og:description" content={{ "{description or renderData.description}" | escape }} />
+  <meta property="og:image" content="/static/img/logo.png" />
+  <meta property="og:type" content="article" />
+  <link rel="canonical" href={{ "{ page.url }" | escape }}/>
+<meta name="robots" content="index, follow" />
 
 		{#- Atom and JSON feeds included by default #}
 		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
