--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -21,7 +21,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{{ title or metadata.title }} | {{ metadata.title }}</title>
 		<meta name="description" content="{{ description or metadata.description }}">
-
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -29,13 +28,13 @@
 		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#ffffff">
-		  <meta property="og:title" content={{ "{ title or renderData.title or metadata.title }" | escape }}/>
-  <meta property="og:url" content={{ "{ page.url }" | escape }} />
-  <meta property="og:description" content={{ "{description or renderData.description}" | escape }} />
-  <meta property="og:image" content="/static/img/logo.png" />
-  <meta property="og:type" content="article" />
-  <link rel="canonical" href={{ "{ page.url }" | escape }}/>
-<meta name="robots" content="index, follow" />
+		<meta property="og:title" content={{title or renderData.title or metadata.title | escape }}/>
+		<meta property="og:url" content={{ page.url | escape }} />
+		<meta property="og:description" content={{ description or renderData.description | escape }} />
+		<meta property="og:image" content="/static/img/logo.png" />
+		<meta property="og:type" content="article" />
+		<link rel="canonical" href={{ page.url | escape }} />
+		<meta name="robots" content="index, follow" />
 
 		{#- Atom and JSON feeds included by default #}
 		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
@@ -66,16 +65,12 @@
 		<style>{% getBundle "css" %}</style>
 	</head>
 	<body>
-			<a href="#skip" class="visually-hidden">Skip to main content</a>
-
+		<div id = "dimLayer"></div>
 			<header>
 				<button id="openDrawerBtn">
 					🌳
 				</button>
-
 			<a href="/" class="home-link">{{ metadata.title }}</a>
-
-			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
 			<nav>
 				<ul class="nav">
 				{%- for entry in collections.all | eleventyNavigation %}
@@ -115,23 +110,40 @@
 		<script type="text/javascript" async>
 		const openDrawerBtn = document.getElementById('openDrawerBtn');
 		const drawerMenu = document.getElementById('drawerMenu');
+		const dimLayer = document.getElementById("dimLayer")
 
 		openDrawerBtn.addEventListener('click', () => {
+			dimLayer.classList.add('appear-dim');
 			drawerMenu.style.left = '0';
-		});
+		})
+
+		dimLayer.addEventListener('click', () => {
+			dimLayer.classList.remove('appear-dim')
+   		    drawerMenu.style.left = '-280px';
+		})
 
 		document.addEventListener('click', (event) => {
+			/**
+			* drawerMenu의 하위 메뉴면서, 이벤트 타겟이 drawerMenu인 경우
+			* 이는 카테고리의 하위 메뉴들이 선택 되었을 때 해당되지 않습니다.
+			* 하위메뉴이지만 drawerMenu자체는 아니기 때문입니다.
+			*/
 			if(drawerMenu.contains(event.target) && event.target === drawerMenu) {
+				dimLayer.classList.remove('appear-dim')
    		        drawerMenu.style.left = '-280px';
 				return
 			}
 
+			/**
+			 * drawerMenu가 아니면 menu를 닫습니다.
+			*/
 			if (
 			event.target !== drawerMenu 
 			&& event.target !== openDrawerBtn
 			&& !drawerMenu.contains(event.target)
 			) {
-   		         drawerMenu.style.left = '-280px';
+				dimLayer.classList.remove('appear-dim')
+				drawerMenu.style.left = '-280px';
 			}
 		});
 		</script>
