--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -65,7 +65,7 @@
 		<style>{% getBundle "css" %}</style>
 	</head>
 	<body>
-		<div id = "dimLayer"></div>
+		<div id = "dimLayer">
 			<header>
 				<button id="openDrawerBtn">
 					🌳
@@ -105,7 +105,8 @@
 		<main>
 			{{ content | safe }}
 		</main>
-		<footer></footer>
+		  <footer></footer>
+      </div>
 	</body>
 		<script type="text/javascript" async>
 		const openDrawerBtn = document.getElementById('openDrawerBtn');
