--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -65,7 +65,7 @@
 		<style>{% getBundle "css" %}</style>
 	</head>
 	<body>
-		<div id="dimLayer">
+		<div id="dimLayer"></div>
 			<header>
 				<button id="openDrawerBtn">
 					🌳
@@ -101,12 +101,10 @@
 					</ul>
 			</nav>
 		</header>
-
 		<main>
 			{{ content | safe }}
 		</main>
 		  <footer></footer>
-      </div>
 	</body>
 		<script type="text/javascript" async>
 		const openDrawerBtn = document.getElementById('openDrawerBtn');
