--- a/css/index.css
+++ b/css/index.css
@@ -1098,7 +1098,7 @@ h2 + .header-anchor {
 }
 
 .appear-dim {
-    position: absolute;
+    position: sticky;
     width: 100%;
     height: 100vh;
     z-index: 1;
