--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,18 @@ z-index:
 1 appear-dim
 
 */
+.appear-dim {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    background-color: var(--color-scale-black);
+    opacity: 0.5;
+    transition: all 0.3s ease-in-out;
+}
+
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -1097,12 +1109,4 @@ h2 + .header-anchor {
     background-color: #555b62;
 }
 
-.appear-dim {
-    position: sticky;
-    width: 100%;
-    height: 100vh;
-    z-index: 1;
-    background-color: var(--color-scale-black);
-    opacity: 0.5;
-    transition: all 0.3s ease-in-out;
-}
+#
