--- a/content/robots.njk
+++ b/content/robots.njk
@@ -4,5 +4,5 @@ eleventyExcludeFromCollections: true
 ---
 User-agent: * 
 Allow: / 
-Sitemap: {{ site.url }}/sitemap.xml
+Sitemap: https://zerozoo-a.github.io/sitemap.xml
 Host: https://zerozoo-a.github.io/
