--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -72,8 +72,7 @@
 				</button>
 			<a href="/" class="home-link">{{ metadata.title }}</a>
 			<nav>
-				<ul class="nav">
-				<div id="drawerMenu">
+				<ul id="drawerMenu"class="nav">
 					<ul>
 						<li>Categories</li>
 						<li><a href="/">home</a></li>
