--- a/content/index.njk
+++ b/content/index.njk
@@ -40,7 +40,7 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
   const postsCount = {{postsCount}}
   let allPages = pageLinks.length
   const pagination = document.getElementById("pagination")
-  const NOTHING_BUTTON = (dir='<')=>`<div class="btn">${dir}</div>`
+  const NOTHING_BUTTON = (dir='<')=>`<li class="btn">${dir}</li>`
   const pageNumber = {{pageNumber}}
 
   function elem(allPages = pageLinks.length, page) {
