--- a/css/index.css
+++ b/css/index.css
@@ -602,11 +602,14 @@ li {
 a {
 	text-decoration: none;
 }
+.nav > a[href] {
+    color:var(--fgColor-default), var(--color-fg-default);
+}
 a[href] {
 	color: var(--text-color-link);
 }
 a[href]:visited {
-	color: var(--text-color-link-visited);
+    color:var(--fgColor-default), var(--color-fg-default);
 }
 a[href]:hover,
 a[href]:active {
@@ -737,7 +740,7 @@ header {
 }
 .postlist-date {
 	font-size: 0.8125em; /* 13px /16 */
-	color: var(--color-scale-gray-4);
+    color:var(--color-fg-default);
 }
 .postlist-date {
 	word-spacing: -0.5px;
@@ -1107,4 +1110,10 @@ h2 + .header-anchor {
 
 #drawerMenu::-webkit-scrollbar-thumb:hover {
     background-color: #555b62;
+}
+
+#drawerMenu summary {
+    font:bolder;
+    font-style: oblique;
+    font-family: cursive;
 }
