--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -7,7 +7,6 @@ layout: layouts/base.njk
 {%- css %}{% include "public/css/gh-md-dark.css" %}{%- endcss %}
 {%- css %}{% include "public/css/gh-syntax.css" %}{%- endcss %}
 <article>
-
 	{% set absoluteUrl %}{{ page.url }}{% endset %}
 	{% if(coverURL) %}
     <img class="big-cover-img" src={% convert coverURL, "0" %} alt="cover image" height="auto" />
@@ -30,7 +29,7 @@ layout: layouts/base.njk
 		</aside>
 {% endif %}
 
-	<section class="post-content markdown-body">
+	<section class="post-content markdown-body" data-pagefind-body>
 		{{ content | safe }}
 	</section>
 <br>
