--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -49,6 +49,7 @@ layout: layouts/base.njk
 {%- endif %}
 
 </article>
+{% mermaid_js %}
 <script type="text/javascript">
 const article = document.querySelector("article");
 
