--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,8 +1,6 @@
 ---
 layout: layouts/base.njk
 ---
-{# Only include the syntax highlighter CSS on blog posts #}
-{# {%- css %}{% include "node_modules/prismjs/themes/prism-okaidia.css" %}{% endcss %} #}
 {%- css %}{% include "public/css/prism-diff.css" %}{%- endcss %}
 {%- css %}{% include "public/css/gh-md-dark.css" %}{%- endcss %}
 {%- css %}{% include "public/css/gh-syntax.css" %}{%- endcss %}
@@ -50,56 +48,12 @@ layout: layouts/base.njk
 
 </article>
 {% mermaid_js %}
-<script type="text/javascript">
-const mermaidEls = document.getElementsByClassName('mermaid')
-
-// 감지 옵션 (감지할 변경)
-const config = { attributes: true, childList: true,  };
-
-
-// 변경 감지 시 실행할 콜백 함수
-const callback = (mutationList, observer) => {
-  for (const mutation of mutationList) {
-    if (mutation.type === "childList") {
-	  for (let i = 0; i < mermaidEls.length; i++) {
-		mermaidEls[i].classList.add("active-mermaid")
-	  	observer.disconnect();
-	  }
-    } 
-  }
-};
-
-
-for(let i = 0; i < mermaidEls.length; i++){
-	mermaidEls[i].classList.add("opacity-0")
-	const observer = new MutationObserver(callback);
-	observer.observe(mermaidEls[i], config);
-}
-
-// 이후 감지 중단 가능
-</script>
-
-<script type="text/javascript">
-const article = document.querySelector("article");
-
-// `document.querySelector` may return null if the selector doesn't match anything.
-if (article) {
-  const text = article.textContent;
-  const wordMatchRegExp = /[^\s]+/g; // Regular expression
-  const words = text.matchAll(wordMatchRegExp);
-  // matchAll returns an iterator, convert to array to get word count
-  const wordCount = [...words].length;
-  const readingTime = Math.round(wordCount / 200);
-  const badge = document.createElement("p");
-  // Use the same styling as the publish information in an article's header
-  badge.classList.add("color-secondary-text", "type--caption");
-  badge.textContent = `읽는데 ⏱️ ${readingTime} 분 정도 소요됩니다.`
-
-  // Support for API reference docs
-  const heading = article.querySelector("h1");
-  // Support for article docs with date
-  const date = article.querySelector("time")?.parentNode;
-
-  (date ?? heading).insertAdjacentElement("afterbegin", badge);
-}
-</script>
+<script 
+type="text/javascript"
+src="/js/lib/mutationObserver.js"
+async
+></script>
+<script type="text/javascript"
+src="/js/lib/getReadTime.js"
+async
+></script>
