--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1122,7 +1122,7 @@ h2 + .header-anchor {
 .opacity-0 {
     opacity: 0; /* Initial opacity */
     height:100%;
-    min-height: min-content;
+    min-height: 300px;
     transition: opacity 1s ease; /* Opacity transition over 1 second */
   }
   
