--- a/content/index.njk
+++ b/content/index.njk
@@ -16,6 +16,8 @@ permalink: ./{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber }}/{
           <div class="p-3 d-flex color-bg-default m-3p post-container">
             {% if(item.data.coverURL) %}
               <img class="cover-img" src={% convert item.data.coverURL, "1" %} alt="cover image" height="auto" />
+            {% elif(item.data.local) %}
+            	<img class="cover-img" src=/img{{ item.filePathStem }}/cover.jpeg alt="cover image" height="auto" ></img>
             {% endif %}
             <div class="d-flex pl-3 flex-direction-col post-title-container">
                 <h4 class="d-flex flex-items-center post-title">
