--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -6,7 +6,7 @@ layout: layouts/base.njk
 {%- css %}{% include "public/css/gh-syntax.css" %}{%- endcss %}
 <article>
 	{% if(coverURL) %}
-    <img class="big-cover-img" src={% convert coverURL, "0" %} alt="cover image" height="auto" />
+    <img class="big-cover-img" src={% convert coverURL, "0", rotate %} alt="cover image" height="auto" />
 	{% elif(local) %}
 	<img class="big-cover-img" src=/img{{ page.filePathStem }}/cover.jpeg alt="cover image" height="auto" ></img>
 	{% else %}
