add rational function

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -115,7 +115,7 @@
 			{{ content | safe }}
 		</main>
 		  <footer></footer>
-		  <script src="/_pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#pagefind-search', showImages: false });"></script>
+		  <script src="/pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#pagefind-search', showImages: false });"></script>
 	</body>
 		<script type="text/javascript" async>
 		const openDrawerBtn = document.getElementById('openDrawerBtn');
