--- a/public/css/index.css
+++ b/public/css/index.css
@@ -609,11 +609,16 @@ a[href] {
 	color: var(--text-color-link);
 }
 a[href]:visited {
-    color:var(--fgColor-default), var(--color-fg-default);
+    /* color:var(--fgColor-default), var(--color-fg-default); */
+    color:var(--color-prettylights-syntax-constant-other-reference-link), var(--color-fg-default);
 }
 a[href]:hover,
 a[href]:active {
 	color: var(--text-color-link-active);
+}
+
+main article a[href]:visited {
+    color:var(--color-prettylights-syntax-constant-other-reference-link);
 }
 
 
