--- a/public/css/gh-md-dark.css
+++ b/public/css/gh-md-dark.css
@@ -101,7 +101,7 @@
   .markdown-body img {
     border-style: none;
     box-sizing: content-box;
-    max-width: 607px;
+    aspect-ratio: 608 / 389;
     background-color: #0d1117;
   }
   
