--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -89,7 +89,6 @@
 			<nav>
 				<ul id="drawerMenu"class="nav">
 					<ul>
-						<li>Categories</li>
 						<li><a href="/">home</a></li>
 						<li><a href="/about">about</a></li>
 						{%- for categories, posts in eleventyComputedGetCategories  %}
@@ -116,7 +115,6 @@
 		</main>
 		  <footer></footer>
 		  <script src="/pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#pagefind-search', showImages: false });"></script>
-	</body>
 		<script type="text/javascript" async>
 		const openDrawerBtn = document.getElementById('openDrawerBtn');
 		const drawerMenu = document.getElementById('drawerMenu');
@@ -157,4 +155,11 @@
 			}
 		});
 		</script>
+	</body>
+	<footer>
+				<p>Disclaimer: This blog is for informational purposes only. 
+					The content provided here is based on personal opinions and experiences.
+				Please consult a professional for specific advice.</p>
+	<p>&copy; 2023 zerozoo-a blog. All rights reserved.</p>
+</footer>
 </html>
