--- a/public/css/index.css
+++ b/public/css/index.css
@@ -662,6 +662,14 @@ table tr:hover {
     border-width: var(--borderWidth-thin, 1px);
 }
 
+.color-border-default {
+    border-color: var(--borderColor-default, var(--color-border-default)) !important;
+}
+
+.rounded-2 {
+    border-radius: var(--borderRadius-medium, 6px) !important;
+}
+
 pre,
 code {
 	font-family: var(--font-family-monospace);
@@ -934,6 +942,12 @@ h2 + .header-anchor {
 .pr-3 {
     padding-right: var(--base-size-16, 16px) !important;
 }
+.p-6 {
+    padding: var(--base-size-24, 24px) !important;
+}
+.mt-12 {
+    margin:12px 0 0 0;
+}
 .m-3 {
     /* margin: var(--base-size-16, 16px) !important; */
     margin: 16px 0;
@@ -1027,10 +1041,10 @@ h2 + .header-anchor {
 	font: inherit;
 	vertical-align: baseline;
 }
-
 .post-container {
     max-height: 112px;
 }
+
 .post-title-container {
     min-width: 128px;
 }
@@ -1040,6 +1054,10 @@ h2 + .header-anchor {
 }
 .katex-html {
     display: none;
+}
+
+.border {
+    border: var(--borderWidth-thin, 1px) solid var(--borderColor-default, var(--color-border-default)) !important;
 }
 
 
@@ -1120,7 +1138,6 @@ h2 + .header-anchor {
 #drawerMenu summary {
     font:bolder;
     font-style: oblique;
-    font-family: cursive;
 }
 
 
