--- a/public/css/index.css
+++ b/public/css/index.css
@@ -564,7 +564,7 @@ body {
 	margin: 0 auto;
 	font-family: var(--font-family);
 	color: var(--text-color);
-	background-color: var(#0e1116);
+	background-color: #0e1116;
 }
 html {
 	overflow-y: scroll;
@@ -858,7 +858,7 @@ h2 + .header-anchor {
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	background-color: var(#0e1116);
+	background-color: #0e1116;
   }
   
 
