--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -105,6 +105,7 @@ eleventyComputed:
 					<ul>
 						<li><a href="/">home</a></li>
 						<li><a href="/about">about</a></li>
+						<li><a href="/feed.xml">RSS</a></li>
 						{% macro renderCate(cate) %}
 							<ul>
 								{% for key, value in cate %}
