--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1062,7 +1062,7 @@ h2 + .header-anchor {
    color: #ffffff;
    transition: left 0.3s ease-in-out;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-   overflow: hidden;
+   overflow: auto;
    z-index: 2;
 }
 
