add post and css

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1011,6 +1011,11 @@ h2 + .header-anchor {
     border-radius: 10px;
 }
 
+.posts-container {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
 .posts-container > ol, .posts-container > ul, .posts-container > li{
 	margin: 0;
 	padding: 0;
@@ -1135,6 +1140,9 @@ h2 + .header-anchor {
   
 .opacity-0.active-mermaid {
     opacity: 1; /* Final opacity */
+    display: grid;
+    align-items: center;
+    justify-items: center;
 }
 
 
