--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -206,8 +206,8 @@ eleventyComputed:
 	</body>
 	<footer>
 				<p>Disclaimer: This blog is for informational purposes only. 
-					The content provided here is based on personal opinions and experiences.
-				Please consult a professional for specific advice.</p>
+					this site's images from <a href="https://unsplash.com">unsplash</a>
+				</p>
 	<p>&copy; 2023 zerozoo-a blog. All rights reserved.</p>
 </footer>
 </html>
