add side project

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -104,6 +104,7 @@ eleventyComputed:
 				<ul id="drawerMenu"class="nav">
 					<ul>
 						<li><a href="/">home</a></li>
+						<li><a href="https://www.yellow-turban.n-e.kr/">개인 프로젝트</a></li>
 						<li><a href="/about">about</a></li>
 						<li><a href="/feed.xml">RSS</a></li>
 						{% macro renderCate(cate) %}
