--- a/content/about/index.njk
+++ b/content/about/index.njk
@@ -14,7 +14,7 @@ eleventyNavigation:
   </article>
   <article class="flex-center">
     <p>
-      Javascript, Typescript, Node, Java에 관심이 많습니다.
+      웹 개발에 관심이 많고 좋아합니다.
     </p>
   </article>
   <div class="space"></div>
@@ -40,7 +40,3 @@ eleventyNavigation:
   </a>
   </section>
 </div>
-
-<script async src="/js/p5.min.js"></script>
-<script async src="/js/gameOfLife/index.js"></script>
-
